Successfully set up Bootstrap 4.1

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -19,9 +19,9 @@
   }
 
   .notification{
-    top: 0;
     text-align: right;
     padding-right: 30px;
+    padding-top: 18px;
     font-size: 20px;
   }
 
