--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -8,6 +8,10 @@
   border-top: 1px white solid;
 }
 
+.p-footer{
+  text-align: center;
+}
+
 .user-footer{
   font-family: "Lato", sans-serif;
   background-color: #495289;
