--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -3,10 +3,12 @@
   background-color: #1C155B;
   padding-top: 15px;
   height: 100%;
-  min-height: 87.2vh;
+  min-height: 88.5vh;
 }
 
 .login-brand{
   padding-top: 60px;
   width:25%;
+  position:fixed;
+  left: 37%;
 }
