--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,3 +1,5 @@
 <body class="login">
-  <img class="login-brand" src='./assets/logo-branco.png'>
+  <div class="login-div">
+    <img class="login-brand" src='./assets/logo-branco.png'>
+  </div>
 </body>
