--- a/b-plus-client/src/app/login-page/login-page.component.html
+++ b/b-plus-client/src/app/login-page/login-page.component.html
@@ -1,5 +1,33 @@
 <body class="login">
   <div class="login-div">
-    <img class="login-brand" src='./assets/logo-branco.png'>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-12 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Sign In</h5>
+              <img class="login-brand" src='./assets/logo-branco.png'>
+              <form class="form-signin">
+                <div class="form-label-group">
+                  <label class="label-login" for="inputEmail">Codigo</label>
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                </div>
+
+                <div class="form-label-group">
+                  <label class="label-login" for="inputPassword">Senha</label>
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                </div>
+
+                <div class="custom-control custom-checkbox mb-3">
+                  <input type="checkbox" class="custom-control-input" id="customCheck1">
+                  <label class="custom-control-label" for="customCheck1">Remember password</label>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
