--- a/b-plus-client/src/app/login-page/login-page.component.html
+++ b/b-plus-client/src/app/login-page/login-page.component.html
@@ -7,22 +7,17 @@
             <div class="card-body">
               <h5 class="card-title text-center">Sign In</h5>
               <img class="login-brand" src='./assets/logo-branco.png'>
-              <form class="form-signin">
+              <form class="form-signin" (ngSubmit)="onSubmit()" #f="ngForm">
                 <div class="form-label-group">
-                  <label class="label-login" for="inputEmail">Codigo</label>
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                  <label class="label-login" for="id">Codigo</label>
+                  <input type="text" class="form-control" [(ngModel)]="model.id" #id="ngModel" placeholder="Código" required autofocus>
                 </div>
 
                 <div class="form-label-group">
-                  <label class="label-login" for="inputPassword">Senha</label>
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                  <label class="label-login" for="password">Senha</label>
+                  <input type="password" class="form-control" [(ngModel)]="model.password" #password="ngModel" placeholder="Senha" required>
                 </div>
-
-                <div class="custom-control custom-checkbox mb-3">
-                  <input type="checkbox" class="custom-control-input" id="customCheck1">
-                  <label class="custom-control-label" for="customCheck1">Remember password</label>
-                </div>
-                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Entrar</button>
               </form>
             </div>
           </div>
