--- a/b-plus-client/src/app/login-page/login-page.component.html
+++ b/b-plus-client/src/app/login-page/login-page.component.html
@@ -10,12 +10,12 @@
               <form class="form-signin" (ngSubmit)="onSubmit()" #f="ngForm">
                 <div class="form-label-group">
                   <label class="label-login" for="id">Codigo</label>
-                  <input type="text" class="form-control" [(ngModel)]="model.id" #id="ngModel" placeholder="Código" required autofocus>
+                  <input type="text" class="form-control" name="id" [(ngModel)]="model.id" #id="ngModel" placeholder="Código" required autofocus>
                 </div>
 
                 <div class="form-label-group">
                   <label class="label-login" for="password">Senha</label>
-                  <input type="password" class="form-control" [(ngModel)]="model.password" #password="ngModel" placeholder="Senha" required>
+                  <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" placeholder="Senha" required>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Entrar</button>
               </form>
