--- a/b-plus-client/src/styles.css
+++ b/b-plus-client/src/styles.css
@@ -13,3 +13,9 @@
   text-align: justify;
   padding-left: 20px;
 }
+
+.global-div{
+  background-color: white;
+  color: #4D4F5C;
+  padding: 4% 4% 4% 4%;
+}
