--- a/b-plus-client/src/app/search-page/search-page.component.html
+++ b/b-plus-client/src/app/search-page/search-page.component.html
@@ -2,4 +2,11 @@
   <p class="main-title">
     Pesquisa de Livros
   </p>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-12">
+        
+      </div>
+    </div>
+  </div>
 </body>
