--- a/b-plus-client/src/app/help-page/help-page.component.html
+++ b/b-plus-client/src/app/help-page/help-page.component.html
@@ -1,5 +1,110 @@
-<body class="main">
+<div class="main">
   <p class="main-title">
     Ajuda
   </p>
-</body>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-12">
+        <div id="faq" role="tablist" aria-multiselectable="true">
+          <div class="card">
+            <div class="card-header" role="tab" id="questionOne">
+              <h5 class="card-title">
+                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerOne" aria-expanded="false" aria-controls="answerTwo">
+                  •	Como pesquisar um livro?
+                </a>
+              </h5>
+            </div>
+            <div id="answerOne" class="collapse" role="tabcard" aria-labelledby="questionOne">
+              <div class="card-body">
+                No. Your mama should've told you about this.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="questionTwo">
+              <h5 class="card-title">
+                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerTwo" aria-expanded="false" aria-controls="answerTwo">
+                  •	Como criar uma lista?
+                </a>
+              </h5>
+            </div>
+            <div id="answerTwo" class="collapse" role="tabcard" aria-labelledby="questionTwo">
+              <div class="card-body">
+                No. Your mama should've told you about this.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="questionThree">
+              <h5 class="card-title">
+                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerThree" aria-expanded="true" aria-controls="answerThree">
+                  •	Como remover uma lista?
+                </a>
+              </h5>
+            </div>
+            <div id="answerThree" class="collapse in" role="tabcard" aria-labelledby="questionThree">
+              <div class="card-body">
+                Keep your boots dry.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="questionFour">
+              <h5 class="card-title">
+                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerFour" aria-expanded="true" aria-controls="answerThree">
+                  •	Como torna uma lista privada?
+                </a>
+              </h5>
+            </div>
+            <div id="answerFour" class="collapse in" role="tabcard" aria-labelledby="questionFour">
+              <div class="card-body">
+                Keep your boots dry.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="questionc">
+              <h5 class="card-title">
+                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerFive" aria-expanded="true" aria-controls="answerThree">
+                  •	Como tornar uma lista pública?
+                </a>
+              </h5>
+            </div>
+            <div id="answerFive" class="collapse in" role="tabcard" aria-labelledby="questionFive">
+              <div class="card-body">
+                Keep your boots dry.
+              </div>
+            </div>
+          </div><div class="card">
+            <div class="card-header" role="tab" id="questionSix">
+              <h5 class="card-title">
+                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerSix" aria-expanded="true" aria-controls="answerThree">
+                  •	Somente professores conseguem recomendar listas?
+                </a>
+              </h5>
+            </div>
+            <div id="answerSix" class="collapse in" role="tabcard" aria-labelledby="questionSix">
+              <div class="card-body">
+                Keep your boots dry.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" role="tab" id="questionSeven">
+              <h5 class="card-title">
+                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerSeven" aria-expanded="true" aria-controls="answerThree">
+                  •	Como compartilhar uma lista?
+                </a>
+              </h5>
+            </div>
+            <div id="answerSeven" class="collapse in" role="tabcard" aria-labelledby="questionSeven">
+              <div class="card-body">
+                Keep your boots dry.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
