Progessed with search bar.

--- a/b-plus-client/src/app/header/header.component.html
+++ b/b-plus-client/src/app/header/header.component.html
@@ -17,7 +17,7 @@
     </a>
     <p class="notification"><span class="glyphicon">&#xe123;</span><p>
     <ul>
-      <li *ngFor="let result of results"><p></p>
+      <li *ngFor="let titulo_material of results" class="user-bar-suggestions"><p></p>
     <span class="tags"></span>
     </ul>
   </div>
