--- a/b-plus-client/src/app/header/header.component.css
+++ b/b-plus-client/src/app/header/header.component.css
@@ -18,7 +18,15 @@
     position: fixed;
     top: 0;
   }
-
+  .user-bar-suggestions{
+    background-color: white;
+    color: black;
+    border-bottom: 3px grey solid;
+    box-shadow: 2px;
+    width: 100%;
+    height: 20px;
+    left:250px;
+  }
   .search-bar-container{
     background-color: white;
     color: grey;
