--- a/b-plus-client/src/app/header/header.component.css
+++ b/b-plus-client/src/app/header/header.component.css
@@ -18,15 +18,7 @@
     position: fixed;
     top: 0;
   }
-  .user-bar-suggestions{
-    background-color: white;
-    color: black;
-    border-bottom: 3px grey solid;
-    box-shadow: 2px;
-    width: 100%;
-    height: 20px;
-    left:250px;
-  }
+
   .search-bar-container{
     background-color: white;
     color: grey;
@@ -45,6 +37,25 @@
     width: 20%;
     height: 100%;
     top: 0;
+  }
+
+  .search-bar-suggestions-container{
+    background-color: white;
+    color: grey;
+    border-bottom: 1px grey solid;
+    box-shadow: 2px;
+    width: 60%;
+    height: 30px;
+  }
+
+  .search-bar-suggestions{
+    background-color: white;
+    color: black;
+    border: 1px grey solid;
+    width: 60%;
+    height: 30px;
+    left:250px;
+    top: 60px;
   }
 
   .notification{
