Started implementing book info page.

--- a/b-plus-client/src/app/book-info/book-info.component.html
+++ b/b-plus-client/src/app/book-info/book-info.component.html
@@ -1,5 +1,49 @@
 <body class="main">
-  <p class="main-title">
-    book-info works!
-  </p>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-12">
+        <h2> METODOLOGIA DO TRABALHO CIENTIFICO: DIRETRIZES PARA O TRABALHO DIDATICO - CIENTIFICO NA UNIVERSIDADE</h2>
+
+        <div class="info">
+          <p>Tipo: Livro</p>
+          <p>Autor: SEVERINO, ANTONIO JOAQUIM</p>
+          <p>Volume: Único</p>
+          <p>Número da Edição: 5</p>
+          <p>Ano da Edição: 1980</p>
+          <p>Editora: SAO PAULO: MORAES</p>
+          <p>Assuntos Relacionados:</p>
+
+          <ul>
+            <li>
+                ADMINISTRAÇAO DE EMPRESAS - TEORIA
+            </li>
+            <li>
+                CAOS DETERMINISTICOS
+            </li>
+            <li>
+                MUDANÇA ORGANIZACIONAL
+            </li>
+            <li>
+      	       COMPLEXIDADE
+            </li>
+            <li>
+      	       ORGANIZAÇOES - TEORIA
+            </li>
+            <li>
+                I.T
+            </li>
+          </ul>
+
+          <p>Número de Exemplares na Bibioteca: 1 unidade.</p>
+          <p>Disponibilidade Atual: 1 exemplar disponível.</p>
+
+          <div class="related">
+          <p>Outros Livros Desse Autor:</p>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
 </body>
