--- a/b-plus-client/src/app/expand-list/expand-list.component.html
+++ b/b-plus-client/src/app/expand-list/expand-list.component.html
@@ -1,5 +1,30 @@
 <body class="main">
   <p class="main-title">
-    expand-list works!
+    Nova Lista
   </p>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-12">
+        Nome:
+        Categoria:
+        Tipo de Lista:
+        Pessoal/Pública/Oficial
+        Livros:
+
+        Comentários
+        <!-- Inserir divisória aqui -->
+        Foto do Usuário
+        Nome do Usuário
+        Nota
+        Data
+        <!-- Inserir divisória aqui -->
+        Conteúdo
+
+        Salvar
+        <!-- Inserir botão aqui  -->
+        Excluir
+        <!-- Inserir botão aqui  -->
+      </div>
+    </div>
+  </div>
 </body>
