--- a/b-plus-client/src/app/home-page/home-page.component.html
+++ b/b-plus-client/src/app/home-page/home-page.component.html
@@ -2,4 +2,39 @@
   <p class="main-title">
     Minha Biblioteca
   </p>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-12">
+        Livros Favoritos
+
+        Título do Livro
+
+        <!-- Inserir botão e icone de rolagem aqui  -->
+
+        Expandir
+        <!-- Inserir botão e icone aqui  -->
+
+        Editar
+        <!-- Inserir botão, divisoria e icone aqui  -->
+
+        Excluir
+        <!-- Inserir botão e icone aqui  -->
+
+        Whatsapp
+        <!-- Inserir botão e icone aqui  -->
+
+        Twitter
+        <!-- Inserir botão e icone aqui  -->
+
+        Facebook
+        <!-- Inserir botão e icone aqui  -->
+
+        E-mail
+        <!-- Inserir botão e icone aqui  -->
+
+        Nova Lista
+        <!-- Inserir botão e icone aqui  -->
+      </div>
+    </div>
+  </div>
 </body>
