--- a/b-plus-client/src/app/recommended-page/recommended-page.component.html
+++ b/b-plus-client/src/app/recommended-page/recommended-page.component.html
@@ -2,4 +2,18 @@
   <p class="main-title">
     Bibliografia Recomendada Por Professores
   </p>
-</body>
+    <div class="container global-div">
+      <div class="row">
+        <div class="col-md-12">
+          Engenharia de Software 1° Semestre
+          <ul>
+            <li>
+              <!-- Inserir divisória aqui -->
+              Matéria
+              X Listas
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
