--- a/b-plus-client/src/app/user-info/user-info.component.html
+++ b/b-plus-client/src/app/user-info/user-info.component.html
@@ -5,7 +5,35 @@
   <div class="container global-div">
     <div class="row">
       <div class="col-md-12">
-      
+        Foto do Usuário
+
+        Nome:
+        RA:
+        Curso:
+        Semestre:
+        E-mail:
+
+        Lista de Notificação:
+        <!-- Inserir quadro aqui-->
+        Icone de Editar
+        <!-- Inserir botão e icone aqui-->
+        <ul>
+            <li>
+              Livro Disponibilidade
+              <!-- Inserir divisória aqui-->
+            </li>
+        </ul>
+
+        Histórico de Empréstimos:
+        <!-- Inserir quadro aqui-->
+        Icone de Expandir
+        <!-- Inserir botão e icone aqui-->
+        <ul>
+            <li>
+              Livro Situação Data
+              <!-- Inserir divisória aqui-->
+            </li>
+        </ul>
       </div>
     </div>
   </div>
