--- a/b-plus-client/src/app/create-list/create-list.component.html
+++ b/b-plus-client/src/app/create-list/create-list.component.html
@@ -1,5 +1,25 @@
 <body class="main">
   <p class="main-title">
-    create-list works!
+    Nova Lista
   </p>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-12">
+        Nome:
+        <!-- Inserir input aqui  -->
+        Categoria:
+        <!-- Inserir input de escolha drop down aqui  -->
+        Tipo de Lista:
+        Pessoal
+        Pública
+        Oficial
+        <!-- Inserir input de escolha aqui  -->
+        Livros:
+        <!-- Inserir input de pesquisa aqui  -->
+        <!-- Inserir quadro pra pesquisa de livro aqui  -->
+        Salvar
+        <!-- Inserir botão aqui  -->
+      </div>
+    </div>
+  </div>
 </body>
