--- a/b-plus-client/src/app/login-page/login-page.component.html
+++ b/b-plus-client/src/app/login-page/login-page.component.html
@@ -5,7 +5,6 @@
         <div class="col-sm-9 col-md-7 col-lg-12 mx-auto">
           <div class="card card-signin my-5">
             <div class="card-body">
-              <h5 class="card-title text-center">Sign In</h5>
               <img class="login-brand" src='../../assets/logo-branco.png'>
               <form class="form-signin" (ngSubmit)="onSubmit()">
                 <div class="form-label-group">
@@ -17,6 +16,7 @@
                   <label class="label-login" for="password">Senha</label>
                   <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" placeholder="Senha" required>
                 </div>
+                <!-- Mudar cor do botão  -->
                 <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Entrar</button>
               </form>
             </div>
