--- a/b-plus-client/src/app/search-page/search-page.component.html
+++ b/b-plus-client/src/app/search-page/search-page.component.html
@@ -8,7 +8,7 @@
         <ul>
         <li *ngFor="let results of results | paginate: {  itemsPerPage: 50,
                                                           currentPage: p}">
-          <p *ngIf="results.numero_exemplar == 1">{{results.titulo_material}}</p>
+          <p *ngIf="results.numero_exemplar == 1">{{results?.titulo_material}}</p>
         </li>
         </ul>
       </div>
