--- a/b-plus-client/src/app/update-list/update-list.component.html
+++ b/b-plus-client/src/app/update-list/update-list.component.html
@@ -2,4 +2,29 @@
   <p class="main-title">
     Editar Lista
   </p>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-12">
+
+        <!-- IGUAL A PAGINA DE CRIAR LISTA SÓ ADICIONA O BOTÃO EXCUIR -->
+
+        Nome:
+        <!-- Inserir input aqui  -->
+        Categoria:
+        <!-- Inserir input de escolha drop down aqui  -->
+        Tipo de Lista:
+        Pessoal
+        Pública
+        Oficial
+        <!-- Inserir input de escolha aqui  -->
+        Livros:
+        <!-- Inserir input de pesquisa aqui  -->
+        <!-- Inserir quadro pra pesquisa de livro aqui  -->
+        Salvar
+        <!-- Inserir botão aqui  -->
+        Excluir
+        <!-- Inserir botão aqui  -->
+      </div>
+    </div>
+  </div>
 </body>
