--- a/b-plus-client/src/app/home-page/home-page.component.html
+++ b/b-plus-client/src/app/home-page/home-page.component.html
@@ -37,4 +37,11 @@
       </div>
     </div>
   </div>
+  <div class="container global-div">
+    <div class="row">
+      <div class="col-md-2 col-md-offset-10">
+        <button type="button" class="button_home-page"> Nova Lista   <i class="fas fa-plus"></i></button>
+      </div>
+    </div>
+  </div>
 </body>
