Progressed with api call.

--- a/b-plus-client/src/app/book-info/book-info.component.html
+++ b/b-plus-client/src/app/book-info/book-info.component.html
@@ -2,15 +2,15 @@
   <div class="container global-div">
     <div class="row">
       <div class="col-md-12">
-        <h2> {{results?.titulo_material}}</h2>
+        <h2> {{results.titulo}} </h2>
 
         <div class="info">
-          <p>Tipo: {{results?.nome_tipo}}</p>
-          <p>Autor: SEVERINO, ANTONIO JOAQUIM</p>
-          <p>Volume: Único</p>
-          <p>Número da Edição: 5</p>
-          <p>Ano da Edição: {{results?.edicao_ano}}</p>
-          <p>Editora: {{results?.nome_editora}}</p>
+          <p>Tipo: {{results.tipo}}</p>
+          <p>Autor: {{results.autor}}</p>
+          <p>Volume: {{results.volume}}</p>
+          <p>Número da Edição: {{results.edicao}}</p>
+          <p>Ano da Edição: {{results.ano}}</p>
+          <p>Editora: {{results.editora}}</p>
           <p>Assuntos Relacionados:</p>
 
           <ul>
