Finished initial tasks on book page.

--- a/b-plus-client/src/app/book-info/book-info.component.html
+++ b/b-plus-client/src/app/book-info/book-info.component.html
@@ -20,8 +20,8 @@
             </li>
           </ul>
 
-          <p>Número de Exemplares na Bibioteca: 1 unidade.</p>
-          <p>Disponibilidade Atual: 1 exemplar disponível.</p>
+          <p>Número de Exemplares na Bibioteca: {{results.n_total}} unidades.</p>
+          <p>Disponibilidade Atual: {{results.n_disponivel}} exemplar disponível.</p>
 
           Avise-me quando estiver disponível:
           <!-- Inserir botão aqui -->
