Redirected button to user page.

--- a/b-plus-client/src/app/header/header.component.html
+++ b/b-plus-client/src/app/header/header.component.html
@@ -12,7 +12,7 @@
     <a class="search-button" [routerLink]="['/search-page']">
       Procurar
     </a>
-    <a [routerLink]="['/config-page']">
+    <a [routerLink]="['/user-info']">
       Usuário
     </a>
     <p class="notification"><span class="glyphicon">&#xe123;</span><p>
