--- a/b-plus-client/src/app/help-page/help-page.component.html
+++ b/b-plus-client/src/app/help-page/help-page.component.html
@@ -5,101 +5,78 @@
   <div class="container global-div">
     <div class="row">
       <div class="col-md-12">
-        <div id="faq" role="tablist" aria-multiselectable="true">
-          <div class="card">
-            <div class="card-header" role="tab" id="questionOne">
-              <h5 class="card-title">
-                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerOne" aria-expanded="false" aria-controls="answerTwo">
-                  •	Como pesquisar um livro?
-                </a>
-              </h5>
+        <div id="accordion" class="accordion">
+          <div class="card mb-0">
+            <div class="card-header collapsed" data-toggle="collapse" href="#collapseOne">
+              <a class="card-title">
+                Item 1
+              </a>
             </div>
-            <div id="answerOne" class="collapse" role="tabcard" aria-labelledby="questionOne">
-              <div class="card-body">
-                No. Your mama should've told you about this.
+            <div id="collapseOne" class="card-body collapse" data-parent="#accordion" >
+              <p class="card-text">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+                craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </p>
+            </div>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+              <a class="card-title">
+                Item 2
+              </a>
+            </div>
+            <div id="collapseTwo" class="card-body collapse" data-parent="#accordion" >
+              <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+                craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              </p>
+            </div>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+              <a class="card-title">
+                Item 3
+              </a>
+            </div>
+            <div id="collapseThree" class="collapse" data-parent="#accordion" >
+              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header" role="tab" id="questionTwo">
-              <h5 class="card-title">
-                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerTwo" aria-expanded="false" aria-controls="answerTwo">
-                  •	Como criar uma lista?
-                </a>
-              </h5>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+              <a class="card-title">
+                Item 3
+              </a>
             </div>
-            <div id="answerTwo" class="collapse" role="tabcard" aria-labelledby="questionTwo">
-              <div class="card-body">
-                No. Your mama should've told you about this.
+            <div id="collapseFour" class="collapse" data-parent="#accordion" >
+              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header" role="tab" id="questionThree">
-              <h5 class="card-title">
-                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerThree" aria-expanded="true" aria-controls="answerThree">
-                  •	Como remover uma lista?
-                </a>
-              </h5>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+              <a class="card-title">
+                Item 3
+              </a>
             </div>
-            <div id="answerThree" class="collapse in" role="tabcard" aria-labelledby="questionThree">
-              <div class="card-body">
-                Keep your boots dry.
+            <div id="collapseFive" class="collapse" data-parent="#accordion" >
+              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header" role="tab" id="questionFour">
-              <h5 class="card-title">
-                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerFour" aria-expanded="true" aria-controls="answerThree">
-                  •	Como torna uma lista privada?
-                </a>
-              </h5>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+              <a class="card-title">
+                Item 3
+              </a>
             </div>
-            <div id="answerFour" class="collapse in" role="tabcard" aria-labelledby="questionFour">
-              <div class="card-body">
-                Keep your boots dry.
+            <div id="collapseSix" class="collapse" data-parent="#accordion">
+              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header" role="tab" id="questionc">
-              <h5 class="card-title">
-                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerFive" aria-expanded="true" aria-controls="answerThree">
-                  •	Como tornar uma lista pública?
-                </a>
-              </h5>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+              <a class="card-title">
+                Item 3
+              </a>
             </div>
-            <div id="answerFive" class="collapse in" role="tabcard" aria-labelledby="questionFive">
-              <div class="card-body">
-                Keep your boots dry.
-              </div>
-            </div>
-          </div><div class="card">
-            <div class="card-header" role="tab" id="questionSix">
-              <h5 class="card-title">
-                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerSix" aria-expanded="true" aria-controls="answerThree">
-                  •	Somente professores conseguem recomendar listas?
-                </a>
-              </h5>
-            </div>
-            <div id="answerSix" class="collapse in" role="tabcard" aria-labelledby="questionSix">
-              <div class="card-body">
-                Keep your boots dry.
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" role="tab" id="questionSeven">
-              <h5 class="card-title">
-                <a class="collapsed collapsed-faq" data-toggle="collapse" data-parent="#faq" href="#answerSeven" aria-expanded="true" aria-controls="answerThree">
-                  •	Como compartilhar uma lista?
-                </a>
-              </h5>
-            </div>
-            <div id="answerSeven" class="collapse in" role="tabcard" aria-labelledby="questionSeven">
-              <div class="card-body">
-                Keep your boots dry.
+            <div id="collapseSeven" class="collapse" data-parent="#accordion" >
+              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
               </div>
             </div>
           </div>
