--- a/b-plus-client/src/app/header/header.component.html
+++ b/b-plus-client/src/app/header/header.component.html
@@ -39,32 +39,26 @@
     			<ul class="nav navbar-nav">
       		    <li>
                 <a [routerLink]="['/home-page']">
-                  <span class="glyphicon">&#xe021;</span>
+                  <i class="fas fa-home"></i>
                   Minha Biblioteca
                 </a>
               </li>
       				<li>
                 <a [routerLink]="['/recommended-page']">
-                  <span class="glyphicon">&#xe044;</span>
+                  <i class="fas fa-bookmark"></i>
                   Bibliografia Recomendada
                 </a>
               </li>
       				<li>
                 <a [routerLink]="['/search-page']">
-                  <span class="glyphicon">&#xe043;</span>
+                  <i class="fas fa-book"></i>
                   Consultar Livros
                 </a>
               </li>
               <li>
                 <a [routerLink]="['/help-page']">
-                  <span class="glyphicon">&#xe085;</span>
+                  <i class="fas fa-question-circle"></i>
                   Ajuda
-                </a>
-              </li>
-              <li>
-                <a [routerLink]="['/config-page']">
-                  <span class="glyphicon">&#xe019;</span>
-                  Configurações
                 </a>
               </li>
       	 	</ul>
