--- a/b-plus-client/src/app/search-page/search-page.component.html
+++ b/b-plus-client/src/app/search-page/search-page.component.html
@@ -10,8 +10,8 @@
                                                           currentPage: p}">
           <button (click)="onClick(results.id_material)" *ngIf="results.numero_exemplar == 1">
             {{results?.titulo_material}}
-            <p *ngIf="results.volume_exemplar != 0" style="display:inline"> {{results.volume_exemplar}}</p>
-            {{results.edicao_ano}}
+            <p *ngIf="results.volume_exemplar != 0" style="display:inline"> {{results?.volume_exemplar}}</p>
+            {{results?.edicao_ano}}
           </button>
         </li>
         </ul>
