--- a/b-plus-client/src/app/user-info/user-info.component.html
+++ b/b-plus-client/src/app/user-info/user-info.component.html
@@ -37,6 +37,8 @@
               <!-- Inserir divisória aqui-->
             </li>
         </ul>
+
+        <button (click)="logOut()">Log Out</button>
       </div>
     </div>
   </div>
