Improved Home Page code.

--- a/b-plus-client/src/app/home-page/home-page.component.html
+++ b/b-plus-client/src/app/home-page/home-page.component.html
@@ -3,8 +3,8 @@
     Minha Biblioteca
   </p>
   <div class="container global-div">
-    <div class="row" *ngFor="let lista of lista">
-      <div class="col-md-12">
+    <div class="row" *ngFor="let lista of lista; let i = index">
+      <div class="col-md-12"(click)="expandList(i)">
         {{this.lista.nome_lista}}
 
         Título do Livro
