Home Page Fully functional.

--- a/b-plus-client/src/app/expand-list/expand-list.component.html
+++ b/b-plus-client/src/app/expand-list/expand-list.component.html
@@ -5,10 +5,12 @@
   <div class="container global-div">
     <div class="row">
       <div class="col-md-12">
-        Nome:
-        Categoria:
+        Nome: {{this.lista.nome_lista}}
+        Categoria: {{this.lista.categoria_lista}}
         Tipo de Lista:
-        Pessoal/Pública/Oficial
+        {{this.lista.situacao_lista}}
+        Criado Por:
+        {{this.user.sobrenome_aluno}}
         Livros:
 
         Comentários
