--- a/b-plus-client/src/app/book-info/book-info.component.html
+++ b/b-plus-client/src/app/book-info/book-info.component.html
@@ -30,10 +30,15 @@
           <p>Outros Livros Desse Autor:</p>
           </div>
 
+
+
+          <div class="form-label-group">
+            <label class="label-login">Comentário</label>
+            <textarea type="text" class="form-control" name="id" placeholder="Deixe seu comentário aqui..." required autofocus rows="5"></textarea>
+          </div>
           <button>
             Avaliar/Comentar
           </button>
-
         </div>
 
       </div>
